--- a/2021-5-4/reference.bib
+++ b/2021-5-4/reference.bib
@@ -224,32 +224,7 @@ abstract = {Sparse sampling and parallel imaging techniques are two effective ap
   doi     = {10.1109/TMI.2010.2088133},
   file    = {:2011_Fast MR Image Reconstruction for Partially Parallel Imaging With Arbitrary  Space Trajectories.pdf:PDF},
 }
-@article{article,
-author = {Liang, Dong and Liu, Bo and Ying, Lei},
-year = {2008},
-month = {02},
-pages = {1667-70},
-title = {Accelerating Sensitivity Encoding Using Compressed Sensing},
-volume = {2008},
-journal = {Conference proceedings : ... Annual International Conference of the IEEE Engineering in Medicine and Biology Society. IEEE Engineering in Medicine and Biology Society. Conference},
-doi = {10.1109/IEMBS.2008.4649495}
-}@INPROCEEDINGS{8296845,
-  author={Sun, Liyan and Huang, Yue and Cai, Congbo and Ding, Xinghao},
-  booktitle={2017 IEEE International Conference on Image Processing (ICIP)}, 
-  title={Compressed sensing MRI using total variation regularization with K-space decomposition}, 
-  year={2017},
-  volume={},
-  number={},
-  pages={3061-3065},
-  doi={10.1109/ICIP.2017.8296845}}@ARTICLE{7337391,
-  author={Zhan, Zhifang and Cai, Jian-Feng and Guo, Di and Liu, Yunsong and Chen, Zhong and Qu, Xiaobo},
-  journal={IEEE Transactions on Biomedical Engineering}, 
-  title={Fast Multiclass Dictionaries Learning With Geometrical Directions in MRI Reconstruction}, 
-  year={2016},
-  volume={63},
-  number={9},
-  pages={1850-1861},
-  doi={10.1109/TBME.2015.2503756}}@article{ying2007joint,
+@article{ying2007joint,
   title={Joint image reconstruction and sensitivity estimation in SENSE (JSENSE)},
   author={Ying, Leslie and Sheng, Jinhua},
   journal={Magnetic Resonance in Medicine: An Official Journal of the International Society for Magnetic Resonance in Medicine},
@@ -257,6 +232,15 @@ doi = {10.1109/IEMBS.2008.4649495}
   number={6},
   pages={1196--1202},
   year={2007},
+  publisher={Wiley Online Library}
+}@article{liang2009accelerating,
+  title={Accelerating SENSE using compressed sensing},
+  author={Liang, Dong and Liu, Bo and Wang, Jiunjie and Ying, Leslie},
+  journal={Magnetic Resonance in Medicine: An Official Journal of the International Society for Magnetic Resonance in Medicine},
+  volume={62},
+  number={6},
+  pages={1574--1584},
+  year={2009},
   publisher={Wiley Online Library}
 }
 @Comment{jabref-meta: databaseType:bibtex;}
