--- a/2021-10-7-文献/reference.bib
+++ b/2021-10-7-文献/reference.bib
@@ -243,45 +243,29 @@ abstract = {Sparse sampling and parallel imaging techniques are two effective ap
   year={2009},
   publisher={Wiley Online Library}
 }
-
-@Article{2015Calibrationless,
-  author  = {Shin, P. J. and Larson, Pez and Ohliger, M. A. and Elad, M. and Pauly, J. M. and Vigneron, D. B. and Lustig, M.},
-  journal = {Magnetic Resonance in Medicine},
-  title   = {Calibrationless parallel imaging reconstruction based on structured low‐rank matrix completion},
-  year    = {2015},
-  number  = {4},
-  pages   = {959-970},
-  volume  = {72},
+@article{li2021regularization,
+  title={Regularization with multilevel non-stationary tight framelets for image restoration},
+  author={Li, Yan-Ran and Chan, Raymond HF and Shen, Lixin and Zhuang, Xiaosheng},
+  journal={Applied and Computational Harmonic Analysis},
+  volume={53},
+  pages={332--348},
+  year={2021},
+  publisher={Elsevier}
 }
-
-@Article{2010Undersampled,
-  author  = {Kai, T. B. and Uecker, M. and Frahm, J.},
-  journal = {Magnetic Resonance in Medicine},
-  title   = {Undersampled radial MRI with multiple coils. Iterative image reconstruction using a total variation constraint},
-  year    = {2010},
-  number  = {6},
-  pages   = {1086-1098},
-  volume  = {57},
-}
-
-@Article{2012Image,
-  author  = {Cai, J. F. and Dong, B. and Osher, S. and Shen, A. Z.},
-  journal = {Journal of the American Mathematical Society},
-  title   = {Image Restoration: Total Variation, Wavelet Frames and Beyond},
-  year    = {2012},
-  number  = {4},
-  pages   = {1033-1089},
-  volume  = {25},
-}
-
-@Article{2011A,
-  author  = {Lca, B and Jcp, A and Bb, C and Pc, B},
-  journal = {Medical Image Analysis},
-  title   = {A wavelet-based regularized reconstruction algorithm for SENSE parallel MRI with applications to neuroimaging - ScienceDirect},
-  year    = {2011},
-  number  = {2},
-  pages   = {185-201},
-  volume  = {15},
+@article{qiao2021balanced,
+  title={A balanced total-variation-Chambolle-Pock algorithm for EPR imaging},
+  author={Qiao, Zhiwei and Redler, Gage and Epel, Boris and Halpern, Howard},
+  journal={Journal of Magnetic Resonance},
+  volume={328},
+  pages={107009},
+  year={2021},
+  publisher={Elsevier}
+}@article{qiu2021highly,
+  title={Highly accelerated parallel MRI using wave encoding and virtual conjugate coils},
+  author={Qiu, Zhilang and Jia, Sen and Su, Shi and Zhu, Yanjie and Liu, Xin and Zheng, Hairong and Liang, Dong and Wang, Haifeng},
+  journal={Magnetic Resonance in Medicine},
+  year={2021},
+  publisher={Wiley Online Library}
 }
 @article{deshmane2012parallel,
   title={Parallel MR imaging},
@@ -291,6 +275,128 @@ abstract = {Sparse sampling and parallel imaging techniques are two effective ap
   number={1},
   pages={55--72},
   year={2012},
+  publisher={Wiley Online Library}
+}@article{ying2007joint,
+  title={Joint image reconstruction and sensitivity estimation in SENSE (JSENSE)},
+  author={Ying, Leslie and Sheng, Jinhua},
+  journal={Magnetic Resonance in Medicine: An Official Journal of the International Society for Magnetic Resonance in Medicine},
+  volume={57},
+  number={6},
+  pages={1196--1202},
+  year={2007},
+  publisher={Wiley Online Library}
+}@article{kellman2001adaptive,
+  title={Adaptive sensitivity encoding incorporating temporal filtering (TSENSE)},
+  author={Kellman, Peter and Epstein, Frederick H and McVeigh, Elliot R},
+  journal={Magnetic Resonance in Medicine: An Official Journal of the International Society for Magnetic Resonance in Medicine},
+  volume={45},
+  number={5},
+  pages={846--852},
+  year={2001},
+  publisher={Wiley Online Library}
+}@article{kreitner2006fast,
+  title={Fast magnetic resonance imaging of the knee using a parallel acquisition technique (mSENSE): a prospective performance evaluation},
+  author={Kreitner, Karl-Friedrich and Romaneehsen, Bernd and Krummenauer, Frank and Oberholzer, Katja and M{\"u}ller, Lars Peter and D{\"u}ber, Christoph},
+  journal={European radiology},
+  volume={16},
+  number={8},
+  pages={1659--1666},
+  year={2006},
+  publisher={Springer}
+}@article{knoll2012parallel,
+  title={Parallel imaging with nonlinear reconstruction using variational penalties},
+  author={Knoll, Florian and Clason, Christian and Bredies, Kristian and Uecker, Martin and Stollberger, Rudolf},
+  journal={Magnetic resonance in medicine},
+  volume={67},
+  number={1},
+  pages={34--41},
+  year={2012},
+  publisher={Wiley Online Library}
+}@article{ye2010computational,
+  title={Computational acceleration for MR image reconstruction in partially parallel imaging},
+  author={Ye, Xiaojing and Chen, Yunmei and Huang, Feng},
+  journal={IEEE Transactions on Medical Imaging},
+  volume={30},
+  number={5},
+  pages={1055--1063},
+  year={2010},
+  publisher={IEEE}
+}@article{bredies2010total,
+  title={Total generalized variation},
+  author={Bredies, Kristian and Kunisch, Karl and Pock, Thomas},
+  journal={SIAM Journal on Imaging Sciences},
+  volume={3},
+  number={3},
+  pages={492--526},
+  year={2010},
+  publisher={SIAM}
+}@article{chun2015efficient,
+  title={Efficient compressed sensing SENSE pMRI reconstruction with joint sparsity promotion},
+  author={Chun, Il Yong and Adcock, Ben and Talavage, Thomas M},
+  journal={IEEE transactions on Medical Imaging},
+  volume={35},
+  number={1},
+  pages={354--368},
+  year={2015},
+  publisher={IEEE}
+}@article{uecker2017estimating,
+  title={Estimating absolute-phase maps using ESPIRiT and virtual conjugate coils},
+  author={Uecker, Martin and Lustig, Michael},
+  journal={Magnetic resonance in medicine},
+  volume={77},
+  number={3},
+  pages={1201--1207},
+  year={2017},
+  publisher={Wiley Online Library}
+}@article{shin2014calibrationless,
+  title={Calibrationless parallel imaging reconstruction based on structured low-rank matrix completion},
+  author={Shin, Peter J and Larson, Peder EZ and Ohliger, Michael A and Elad, Michael and Pauly, John M and Vigneron, Daniel B and Lustig, Michael},
+  journal={Magnetic resonance in medicine},
+  volume={72},
+  number={4},
+  pages={959--970},
+  year={2014},
+  publisher={Wiley Online Library}
+}@article{blaimer2014regularization,
+  title={Regularization method for phase-constrained parallel MRI},
+  author={Blaimer, Martin and Jakob, Peter M and Breuer, Felix A},
+  journal={Magnetic resonance in medicine},
+  volume={72},
+  number={1},
+  pages={166--171},
+  year={2014},
+  publisher={Wiley Online Library}
+}@article{aggarwal2018modl,
+  title={MoDL: Model-based deep learning architecture for inverse problems},
+  author={Aggarwal, Hemant K and Mani, Merry P and Jacob, Mathews},
+  journal={IEEE transactions on medical imaging},
+  volume={38},
+  number={2},
+  pages={394--405},
+  year={2018},
+  publisher={IEEE}
+}@article{salimans2017pixelcnn++,
+  title={Pixelcnn++: Improving the pixelcnn with discretized logistic mixture likelihood and other modifications},
+  author={Salimans, Tim and Karpathy, Andrej and Chen, Xi and Kingma, Diederik P},
+  journal={arXiv preprint arXiv:1701.05517},
+  year={2017}
+}@article{luo2020mri,
+  title={MRI reconstruction using deep Bayesian estimation},
+  author={Luo, Guanxiong and Zhao, Na and Jiang, Wenhao and Hui, Edward S and Cao, Peng},
+  journal={Magnetic resonance in medicine},
+  volume={84},
+  number={4},
+  pages={2246--2261},
+  year={2020},
+  publisher={Wiley Online Library}
+}@article{sandino2021accelerating,
+  title={Accelerating cardiac cine MRI using a deep learning-based ESPIRiT reconstruction},
+  author={Sandino, Christopher M and Lai, Peng and Vasanawala, Shreyas S and Cheng, Joseph Y},
+  journal={Magnetic Resonance in Medicine},
+  volume={85},
+  number={1},
+  pages={152--167},
+  year={2021},
   publisher={Wiley Online Library}
 }
 @Comment{jabref-meta: databaseType:bibtex;}
