--- a/2021-7-11/reference.bib
+++ b/2021-7-11/reference.bib
@@ -243,54 +243,28 @@ abstract = {Sparse sampling and parallel imaging techniques are two effective ap
   year={2009},
   publisher={Wiley Online Library}
 }
-
-@Article{2015Calibrationless,
-  author  = {Shin, P. J. and Larson, Pez and Ohliger, M. A. and Elad, M. and Pauly, J. M. and Vigneron, D. B. and Lustig, M.},
-  journal = {Magnetic Resonance in Medicine},
-  title   = {Calibrationless parallel imaging reconstruction based on structured low‐rank matrix completion},
-  year    = {2015},
-  number  = {4},
-  pages   = {959-970},
-  volume  = {72},
+@article{li2021regularization,
+  title={Regularization with multilevel non-stationary tight framelets for image restoration},
+  author={Li, Yan-Ran and Chan, Raymond HF and Shen, Lixin and Zhuang, Xiaosheng},
+  journal={Applied and Computational Harmonic Analysis},
+  volume={53},
+  pages={332--348},
+  year={2021},
+  publisher={Elsevier}
 }
-
-@Article{2010Undersampled,
-  author  = {Kai, T. B. and Uecker, M. and Frahm, J.},
-  journal = {Magnetic Resonance in Medicine},
-  title   = {Undersampled radial MRI with multiple coils. Iterative image reconstruction using a total variation constraint},
-  year    = {2010},
-  number  = {6},
-  pages   = {1086-1098},
-  volume  = {57},
-}
-
-@Article{2012Image,
-  author  = {Cai, J. F. and Dong, B. and Osher, S. and Shen, A. Z.},
-  journal = {Journal of the American Mathematical Society},
-  title   = {Image Restoration: Total Variation, Wavelet Frames and Beyond},
-  year    = {2012},
-  number  = {4},
-  pages   = {1033-1089},
-  volume  = {25},
-}
-
-@Article{2011A,
-  author  = {Lca, B and Jcp, A and Bb, C and Pc, B},
-  journal = {Medical Image Analysis},
-  title   = {A wavelet-based regularized reconstruction algorithm for SENSE parallel MRI with applications to neuroimaging - ScienceDirect},
-  year    = {2011},
-  number  = {2},
-  pages   = {185-201},
-  volume  = {15},
-}
-@article{deshmane2012parallel,
-  title={Parallel MR imaging},
-  author={Deshmane, Anagha and Gulani, Vikas and Griswold, Mark A and Seiberlich, Nicole},
-  journal={Journal of Magnetic Resonance Imaging},
-  volume={36},
-  number={1},
-  pages={55--72},
-  year={2012},
+@article{qiao2021balanced,
+  title={A balanced total-variation-Chambolle-Pock algorithm for EPR imaging},
+  author={Qiao, Zhiwei and Redler, Gage and Epel, Boris and Halpern, Howard},
+  journal={Journal of Magnetic Resonance},
+  volume={328},
+  pages={107009},
+  year={2021},
+  publisher={Elsevier}
+}@article{qiu2021highly,
+  title={Highly accelerated parallel MRI using wave encoding and virtual conjugate coils},
+  author={Qiu, Zhilang and Jia, Sen and Su, Shi and Zhu, Yanjie and Liu, Xin and Zheng, Hairong and Liang, Dong and Wang, Haifeng},
+  journal={Magnetic Resonance in Medicine},
+  year={2021},
   publisher={Wiley Online Library}
 }
 @Comment{jabref-meta: databaseType:bibtex;}
